--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "'vandelay.com' # 'www.vandelay.com'\n"
    ]
   },
   {
